Fix spacing of display math

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -201,6 +201,15 @@ article {
         margin: 0;
         padding: 0 10px 0 10px;
         border-radius: 5px;
+
+        // Display math at the end of a blockquote needs extra spacing!
+        p {
+            div:last-of-type {
+                &.MathJax_Display {
+                    padding-bottom: 5px;
+                }
+            }
+        }
     }
 }
 
